--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "http-status": "^1.7.0",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^14.0.1",
-    "mongoose": "^7.5.1"
+    "mongoose": "^7.5.1",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.4",
