--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
