--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -30,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^14.0.1",
     "mongoose": "^7.5.1",
+    "multer": "^1.4.5-lts.1",
     "zod": "^3.22.2"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.3",
     "prettier": "^3.0.3",
