--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.3",
