--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "datauri": "^4.1.0",
     "dotenv": "^16.3.1",
     "eslint": "^8.49.0",
     "express": "^4.18.2",
